[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/UI/Scenes/Separator.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/UI/Scenes/TabWidget/ShipMenu.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/Scenes/Caption.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/UI/Images/Buttons/msg_button.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/Icons/Ship/anchor_bw.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/Icons/Ship/load-unload_32_bw.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/Icons/Ship/traderoute.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/Icons/Ship/discard_all_32.png" type="Texture" id=8]
[ext_resource path="res://Assets/UI/Icons/Ship/traderoute_hover_to_enable.png" type="Texture" id=9]
[ext_resource path="res://Assets/UI/Icons/Ship/load-unload_32.png" type="Texture" id=10]
[ext_resource path="res://Assets/UI/Icons/Ship/anchor.png" type="Texture" id=11]
[ext_resource path="res://Assets/UI/Icons/Ship/discard_all_32_h.png" type="Texture" id=12]
[ext_resource path="res://Assets/UI/Icons/Ship/anchor_d.png" type="Texture" id=13]
[ext_resource path="res://Assets/UI/Icons/Ship/discard_all_32_bw.png" type="Texture" id=14]
[ext_resource path="res://Assets/UI/Icons/Ship/load-unload_32_h.png" type="Texture" id=15]
[ext_resource path="res://Assets/UI/Icons/Ship/anchor_h.png" type="Texture" id=16]
[ext_resource path="res://Assets/UI/Icons/Ship/traderoute_h.png" type="Texture" id=17]
[ext_resource path="res://Assets/UI/Icons/Ship/traderoute_disabled.png" type="Texture" id=19]
[ext_resource path="res://Assets/UI/Images/TabWidget/main_bg_fill.png" type="Texture" id=21]
[ext_resource path="res://Assets/UI/Scenes/TabWidget/FactionFlag.tscn" type="PackedScene" id=23]

[node name="Body" type="TextureRect"]
margin_top = 60.0
margin_right = 251.0
margin_bottom = 202.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 4
size_flags_vertical = 3
texture = ExtResource( 21 )
stretch_mode = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShipMenu" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -19.0
margin_right = -15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" parent="ShipMenu" instance=ExtResource( 23 )]

[node name="Caption" parent="ShipMenu" instance=ExtResource( 3 )]
margin_top = 28.0
margin_right = 220.0
margin_bottom = 49.0
custom_constants/shadow_offset_y = 10
text = "Unknown Beauty"

[node name="Separator" parent="ShipMenu" instance=ExtResource( 1 )]
margin_top = 53.0
margin_bottom = 61.0
size_flags_horizontal = 2

[node name="ShipActionsContainer" type="HBoxContainer" parent="ShipMenu"]
margin_top = 65.0
margin_right = 220.0
margin_bottom = 117.0

[node name="Transfer" type="TextureRect" parent="ShipMenu/ShipActionsContainer"]
margin_right = 52.0
margin_bottom = 52.0
texture = ExtResource( 4 )

[node name="TransferButton" type="TextureButton" parent="ShipMenu/ShipActionsContainer/Transfer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 15 )
texture_disabled = ExtResource( 6 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Colonise" type="TextureRect" parent="ShipMenu/ShipActionsContainer"]
margin_left = 56.0
margin_right = 108.0
margin_bottom = 52.0
texture = ExtResource( 4 )

[node name="ColoniseButton" type="TextureButton" parent="ShipMenu/ShipActionsContainer/Colonise"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 16 )
texture_disabled = ExtResource( 5 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TradeRoutes" type="TextureRect" parent="ShipMenu/ShipActionsContainer"]
margin_left = 112.0
margin_right = 164.0
margin_bottom = 52.0
texture = ExtResource( 4 )

[node name="TradeRoutesButton" type="TextureButton" parent="ShipMenu/ShipActionsContainer/TradeRoutes"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 17 )
texture_disabled = ExtResource( 19 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DropCarco" type="TextureRect" parent="ShipMenu/ShipActionsContainer"]
margin_left = 168.0
margin_right = 220.0
margin_bottom = 52.0
texture = ExtResource( 4 )

[node name="DropCargoButton" type="TextureButton" parent="ShipMenu/ShipActionsContainer/DropCarco"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 12 )
texture_disabled = ExtResource( 14 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="ShipMenu/ShipActionsContainer"]
visible = false
margin_left = 224.0
margin_right = 276.0
margin_bottom = 52.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Separator2" parent="ShipMenu" instance=ExtResource( 1 )]
margin_top = 121.0
margin_right = 220.0
margin_bottom = 129.0

[node name="InvMarginBox" type="MarginContainer" parent="ShipMenu"]
margin_top = 133.0
margin_right = 220.0
margin_bottom = 133.0
custom_constants/margin_left = 5

[node name="InvGridContainer" type="GridContainer" parent="ShipMenu/InvMarginBox"]
margin_left = 5.0
margin_right = 220.0
columns = 4
[connection signal="pressed" from="ShipMenu/ShipActionsContainer/Colonise/ColoniseButton" to="." method="_on_ColoniseButton_pressed"]
